--- a/ვარიანტი2.md
+++ b/ვარიანტი2.md
@@ -80,4 +80,15 @@ hello
 ```cpp
 hello
 ```
-### 5) მოცემულია მთელი არაუარყოფითი რიცხვების ვექტორი {3, 2, 1, 2, 3, 4, 5, 1} დაახარისხეთ იგი გადათვლის (counting sort) ალგორითმით და აჩვენეთ
+### 5) მოცემულია მთელი არაუარყოფითი რიცხვების ვექტორი {3, 2, 1, 2, 3, 4, 5, 1} დაახარისხეთ იგი გადათვლის (counting sort) ალგორითმით და აჩვენეთ ბიჯების მიხედვით როგორ იცვლება დამხმარე c ვექტორი და საბოლოო b(n) ვექტორი.
+```cpp
+hello
+```
+### 6) გროვის აგების ალგორითმის ფსევდოკოდი ან კოდი, მისი სისწრაფის შეფასება დამტკიცების გარეშე
+```cpp
+hello
+```
+### ძებნის ორობითი ხე. ხის შემოვლის, ძებნის, მინიმუმის და მაქსიმუმის მოძებნის ალგორითმები. მათი კორექტულობის საკითხი.
+```cpp
+hello
+```
