--- a/ვარიანტი3.md
+++ b/ვარიანტი3.md
@@ -1,4 +1,4 @@
-# ბილეთი 3
+ # ბილეთი 3
 ### შექმენით პროგრამა რომელიც გააკეთებს ვექტორს, განაცხადშივე შეავსებს მას რამდენიმე ნამდვილი რიცხვით (5 ან 6 მაინც) ამ ვექტორისგან შექმნის გროვას და დაბეჭდავს მის შიგთავსს. შემდეგ დაამატებს გროვაში კიდევ ორ ელემენტს. მოიყვანეთ გროვაში ელემენტის ჩამატების ალგორითმის ფსევდოკოდი ან კოდი და მისი სისწრაფის შეფასება.
 ```cpp
 hello
@@ -48,7 +48,28 @@ hello
 ```
 hello
 ```
-### 3) ღია მისამართებით ჰეშირებისთვის (open addressing) მოიყვანეთ ჩამატების (insert) ფუნქციის ფსევდო კოდი. წრფივი გადასინჯვებით ჰეშირებისას, რა სახე აქვს H(k,i) ჰეშ-ფუნქციას? სადაც k გასაღებია, i ცდის ნომერი? ვთქვათ, შემდეგ ჰეშ-ცხრილი მიღებულია წრფივი გადასინჯვებით, როდესაც ჰეშ-ფუნქცია ტოლია თავისი გასაღების ანუ n(k) - k
+### 3) ღია მისამართებით ჰეშირებისთვის (open addressing) მოიყვანეთ ჩამატების (insert) ფუნქციის ფსევდო კოდი. წრფივი გადასინჯვებით ჰეშირებისას, რა სახე აქვს H(k,i) ჰეშ-ფუნქციას? სადაც k გასაღებია, i ცდის ნომერი? ვთქვათ, შემდეგ ჰეშ-ცხრილი მიღებულია წრფივი გადასინჯვებით, როდესაც ჰეშ-ფუნქცია ტოლია თავისი გასაღების ანუ h(k) - k
+0|1|2|3|4|5|6|7|8|9|10|
+0|0|0|0|4|26|0|0|0|0|10|
+აჩვენეთ თუ როგორ მოხდება ამ ცხრილში 17 და 26-ის დამატება? 
+მოიყვანეთ პროგრამული კოდის ფრაგმენტი, რომელშიც კეთდება განაცხადი დაუხარისხებელი სიმრავლის ობიექტზე. მოხდება იგივე გასაღებების ჩამატება, რაც წერია ცხრილში, შემდეგ 17 და 26-ის დამატება, შემდეგ 97-ის მოძებნა და წაშლა.
 ```
 hello
 ```
+### 4) გააკეთეთ განაცხადი სიმრავლის (set) ობიექტზე დს განაცხადის გაკეთების მომენტშივე ჩააგდეთ მასში რამდენიმე მთელი რიცხვი. შემდეგ, იანგარიშეთ კონტეინერში მოთავსებული ელემენტების საშუალო არითმეთიკული და დაბეჭდეთ იგი. დაბეჭდეთ კონტეინერის უმცირესი და მისი მომდევნო ელემენტები.
+```
+hello
+```
+### 5) მოცემულია მთელი არაუარყოფითი რიცხვების ვექტორი {0, 4, 1, 2, 3, 0, 5, 2} დაახარისხეთ იგი გადათვლის (counting sort) ალგორითმით და აჩვენეთ ბიჯების მიხედვით როგორ იცვლება დამხმარე c ვექტორი და საბოლოო b(n) ვექტორი.
+```
+hello
+```
+### 6) გროვაში ახალი ელემენტის დამატების, გროვიდან ელემენტის ამოღების და გროვით დახარისხების ალგორითმები. მათი სისწრაფის შეფასება.
+```
+hello
+```
+### 7) ძებნის ორობითი ხე. ახალი კვანძის ჩამატების ალგორითმი. მისი კორექტულობისა და სისწრაფის საკითხი. მოიყვანეთ ალგორითმის სახე, რომელსაც ის მიიღებს ძებნის დალაგებული ხის შემთხვევაში.
+```
+hello
+```
+
