--- a/ვარიანტი1.md
+++ b/ვარიანტი1.md
@@ -1,4 +1,5 @@
-### შექმენით პროგრამა რომელიც გააკეთებს ვექტორს, განაცხადშივე შეავსებს მას რამდენიმე მთელი რიცხვით (5 ან 6 მაინც ამ ვექტორისგან შექმნის გროვას და დაბეჭდავს მის შიგთავსს. შემდეგ დაამატებს გროვაში კიდევ სამ ელემენტს. მოიყვანეთ გროვაში ელემენტის ჩამატების ალგორითმის ფსევდოკოდი ან კოდი და მისი სისწრაფის შეფასება. 
+# ბილეთი 1
+### 1) შექმენით პროგრამა რომელიც გააკეთებს ვექტორს, განაცხადშივე შეავსებს მას რამდენიმე მთელი რიცხვით (5 ან 6 მაინც ამ ვექტორისგან შექმნის გროვას და დაბეჭდავს მის შიგთავსს. შემდეგ დაამატებს გროვაში კიდევ სამ ელემენტს. მოიყვანეთ გროვაში ელემენტის ჩამატების ალგორითმის ფსევდოკოდი ან კოდი და მისი სისწრაფის შეფასება. 
 ```cpp
 #include <algorithm>
 #include <iostream>
@@ -77,6 +78,7 @@ void binary_heap<T>::heapify_subtree
    /
   48
 ```
+```
 Average O(1) - თუ არსებობს ელემენტი შექმენი ელემენტი
 Worst - Case O(log n) - თუ უკვე არსებობს ჩასვი პირველ ცარიელ ადგილას Heapify()
 
@@ -87,11 +89,12 @@ delete-min - O(Log n) O(Log n)
 decrease - key - O(Log n) O(Log n)
 მერჯი - O(n) O(n)
 parent - (i - 1) / 2
-___
+```
+### 2) უპასუხეთ შემდეგ კითხვებს: მოიყვანეთ ძებნის ორობითი ხის განმარტება: 
 
-### უპასუხეთ შემდეგ კითხვებს: მოიყვანეთ ძებნის ორობითი ხის განმარტება: 
-
+```
 ძებნის ორობით ხე არის მონაცემთა სტრუქტურა რომელიც გამოიყნება კომპიუტერულ მეცნიერებაში მონაცემთა დასახარისხებლად, შესანახად. ორობით საძიებო ხის თითოეულ კვანძს ჰყავს მაქსიმუმ ორი შვილი, მარცხენა და მარჯვენა. მარცხენა შვილი შეიცავს მშობელ კვანძზე ნაკლებ მნიშვნელობას, ხოლო მარჯვენა შვილი შეიცავს მშობელ კვანძზე მეტ მნიშვნელობებს. ის იერარქიული სტრუქტურა იძლევა ხეში შენახულ მონაცემებზე ეფექტური ძიების ჩასმის და წაშლის ოპერაციები.
+```
 ___
 ### დახატეთ ძებინის ორობითი ხე რომელის კვანძებში მისამართებით a1, ... , a6 ჩაწერილია გასაღებები 55, 77, 45, 56, 46, 80; კვანძებს მიუთითეთ შესაბამისი მისამართი.
 ```
@@ -101,21 +104,22 @@ ___
   \       /    \
 46(a5)  56(a4)  80(a6)
 ```
-___
-### როგორ განიმარტება ძებნის ორობითი ხის სიმაღლე? როგორია ამ ხის სიმაღლე? ძებნის ორობითი ხის სიმაღლე განისაზღვრება, კვანძებთა შორის არსებული მაქსიმალური დონით.
-
-ამ ხის სიმაღლეა 2 
-___
+### როგორ განიმარტება ძებნის ორობითი ხის სიმაღლე? როგორია ამ ხის სიმაღლე? 
+```
+ძებნის ორობითი ხის სიმაღლე განისაზღვრება, კვანძებთა შორის არსებული მაქსიმალური დონით. ამ ხის სიმაღლეა 2
+``` 
 რისი ტოლია left(p(p(a6))) და left(p(a6)) მისართები?
+```
 1) a3 - 45
 2) a4 - 56
-___
+```
 ### რისი ტოლია a4-ის მომდევნო მისამართი? a1 - ის მომდევნო მისამართი?
 
+```
 როგორც ვხედავთ a4 - ის მომდევნო მისამართი ხეში არ არსებობს, ძებნა ჩვეულებრივად დაიწყება თუმცა საბოლოოდ როცა დავადგენთ, რომ მიზნის მნიშვნელობა არ არსებობს ხეში ძებნა სრულდება და დააბრუნებს null/None მისამართს.
 in - order - traversal - 56 ანუ a4
-level - order - traversal - 45 ანუ a3 
-___
+level - order - traversal - 45 ანუ a3
+```
 ### მოიყვანეთ პროგრამის ფრაგმენტი, რომელიც შექმნის სიმრავლის (ხეს), ჩატარებს მასში მითითებულ გასაღებებს, მოძებნის 70-ს და დაბეჭდავს ძებნის შედეგს.
 
 ```cpp
@@ -140,7 +144,6 @@ int main() {
     return 0;
 }
 ```
-___
 ### დახატეთ ძწბნის დალაგებული ხე, რომლის კვანძებში მისამართებით a1, ..., a6 ჩაწერილია გასაღებები 55, 77, 45, 56, 46, 80 კვანძებს მიუთითეთ შესაბამისი მისამართი.
 
 ```
@@ -150,16 +153,16 @@ ___
    \        /    \
    46(a5)  56(a4) 80(a6)
 ```
-___
 ### რისი ტოლია a1 კვანძის რანგი (ანუ მისი გასაღები სიდიდით რომელია ხეში) და რატომ 
 
+```
 a1 - ის რანგი = 2; რადგან მის ქვეშ ყველაზე გრძელი გზა შედგება 2 შვილისგან.
-___
+```
 ### რომელი კვანძები არის სიდიდით მეორე და სიდიდით მეოთხე?
-
+```
 მეორე - 77
 მეოთხე - 55
-___
+```
 ### მოიყვანეთ რომელიმე ერთი ალგორითმის კოდი ან ფსევდო კოდი, რომელიც მუშაობს სიმაღლის პროპორციულ დროში.
 ```cpp
 #include <iostream>
@@ -180,7 +183,7 @@ int main() {
     return 0;
 }
 ```
-### ღია მისამართებით ჰეშირებისთვის (open addressing) მოიყვანეთ ჩამატების (insert) ფუნქციის ფსევდო კოდი. წრფივი გადასინჯვებით ჰეშირებისას, რა სახე აქვს H(k,i) ჰეშ-ფუნქციას, სადაც k გასაღებია, i ცდის ნომერი? ვთქვათ, შემდეგ ჰეშ-ცხრილი მიღებულია წრფივი გადასინჯვებით, როდესაც ჰეშ-ფუნქცია ტოლია თავისი გასაღების ანუ n(k) - k
+### 3) ღია მისამართებით ჰეშირებისთვის (open addressing) მოიყვანეთ ჩამატების (insert) ფუნქციის ფსევდო კოდი. წრფივი გადასინჯვებით ჰეშირებისას, რა სახე აქვს H(k,i) ჰეშ-ფუნქციას, სადაც k გასაღებია, i ცდის ნომერი? ვთქვათ, შემდეგ ჰეშ-ცხრილი მიღებულია წრფივი გადასინჯვებით, როდესაც ჰეშ-ფუნქცია ტოლია თავისი გასაღების ანუ n(k) - k
 
 ### 0|1|2|3|4|5|6|7|8|9|10|
 
@@ -209,12 +212,11 @@ Function Insert(key, value):
         If index == initial_index:
             Return false (table is full, cannot insert)
 ```
-___
 ### მოიყვანეთ პროგრამული კოდის ფრაგმენტი, რომელშიც კეთდება განაცხადი დაუხარისხებელი სიმრავლის ობიექტზე, მოხდება იგივე გასაღებების ჩამატება რაც წერია ცხრილში, შემდეგ 42 და 97-ის დამატება, შემდეგ 97-ის მოძებნა და წაშლა.
 ```cpp
 hello
 ```
-### გააკეთეთ განაცხადი სიმრავლის (set) ობიექტზე და განაცხადის გაკეთების მომენტშივე ჩააგდეთ მასში რამდენიმე ნამდვილლი რიცხვი. შემდეგ იანგარიშეთ კონტეინერში მოთავსებული ელემენტების ნამრავლი და დაბეჭდეთ იგი. დაბეჭდეთ კონტეინერის უდიდესი და უმცირესი ელემენტები.
+### 4) გააკეთეთ განაცხადი სიმრავლის (set) ობიექტზე და განაცხადის გაკეთების მომენტშივე ჩააგდეთ მასში რამდენიმე ნამდვილლი რიცხვი. შემდეგ იანგარიშეთ კონტეინერში მოთავსებული ელემენტების ნამრავლი და დაბეჭდეთ იგი. დაბეჭდეთ კონტეინერის უდიდესი და უმცირესი ელემენტები.
 ```cpp
 #include <iostream>
 #include <set>
@@ -238,17 +240,16 @@ cout << *s.begin()<<'\n';
 cout << *s.rbegin() << '\n';
 }
 ```
-### მოცემულია მთელი არაუარყოფითი რიცხვების ვექტორი (0, 2, 1, 2, 3, 0, 5, 3) დაახასიათეთ იგი გადათვლის (CountingSort) ალგორითმით და აჩვენეთ ბიჭების მიხედვით როგორ იცვლება დამხმარე c ვექტორი და საბოლოო b(n) ვექტორი.
+### 5) მოცემულია მთელი არაუარყოფითი რიცხვების ვექტორი (0, 2, 1, 2, 3, 0, 5, 3) დაახასიათეთ იგი გადათვლის (CountingSort) ალგორითმით და აჩვენეთ ბიჭების მიხედვით როგორ იცვლება დამხმარე c ვექტორი და საბოლოო b(n) ვექტორი.
 
 ```
 hello
 ```
-### ორობითი გროვა: ძირითადი განმარტებები, გროვის ძირითადი მეთოდების აღწერა, გროვის ძირითადი თვისების აღდგენის ალგორითმის ფსევდო კოდი ან კოდი, მისი სისწრაფის შეფასება და ალგორითმის კორექტულობის საკითხი.
+### 6) ორობითი გროვა: ძირითადი განმარტებები, გროვის ძირითადი მეთოდების აღწერა, გროვის ძირითადი თვისების აღდგენის ალგორითმის ფსევდო კოდი ან კოდი, მისი სისწრაფის შეფასება და ალგორითმის კორექტულობის საკითხი.
 ```
 hello
 ```
-### გადათვლით დახარისხების ალგორითმი, მისი სისწრაფის შეფასება და განხილვა შესაძლო განზოგადებები.
-
+### 7) გადათვლით დახარისხების ალგორითმი, მისი სისწრაფის შეფასება და განხილვა შესაძლო განზოგადებები.
+```
 counting sort დახარისხების სპეციფიკური ალგორითმია იმიტომ, რომ იგი მხოლოდ და მხოლოდ მთელ რიცხვებს ამუშავებს, ამის ხაეჯზე ეს ითვლება საუკეთესო ალგორითმად ბიჯების თვალსაზრისით. სისწრაფე პროპორციულია დიაპაზონის. ის წრფივ დროში ახარისხებს მონაცემებს მისი მუშაობის სიჩქარეა n. მისი სიჩქარე დამოკიდებულია იმაზე თუ რამდენი ელემენტიც აქვს (რამხელა დიაპაზონიც აქვს კონტეინერს) counting sort - ისთვის საჭიროა დამხმარე კონტეინერი.
-
----
+```
