--- a/ვარიანტი2.md
+++ b/ვარიანტი2.md
@@ -24,8 +24,9 @@ v.push_back("house");
         i <- parent(i)*/
 ```
 ### 2) უპასუხეთ შემდეგ კითხვებს: მოიყვანეთ ძებნის ორობითი ხის განმარტება
+```
 ძებნის ორობით ხე არის მონაცემთა სტრუქტურა რომელიც გამოიყნება კომპიუტერულ მეცნიერებაში მონაცემთა დასახარისხებლად, შესანახად. ორობით საძიებო ხის თითოეულ კვანძს ჰყავს მაქსიმუმ ორი შვილი, მარცხენა და მარჯვენა. მარცხენა შვილი შეიცავს მშობელ კვანძზე ნაკლებ მნიშვნელობას, ხოლო მარჯვენა შვილი შეიცავს მშობელ კვანძზე მეტ მნიშვნელობებს. ის იერარქიული სტრუქტურა იძლევა ხეში შენახულ მონაცემებზე ეფექტური ძიების ჩასმის და წაშლის ოპერაციები.
-___
+```
 ### დახატეთ ძებინის ორობითი ხე რომელის კვანძებში მისამართებით a1, ... , a6 ჩაწერილია გასაღებები 55, 77, 60, 35, 40, 41; კვანძებს მიუთითეთ შესაბამისი მისამართი.
 ```
     55(a1)
@@ -37,18 +38,19 @@ ___
        41(a6)
 ```
 ### როგორ განიმარტება ძებნის ორობითი ხის სიმაღლე? როგორია ამ ხის სიმაღლე? 
+```
 ძებნის ორობითი ხის სიმაღლე განისაზღვრება, კვანძებთა შორის არსებული მაქსიმალური დონით.
-
 ამ ხის სიმაღლეა - 3
-
-
+```
 ### რისი ტოლია left(p(p(a5))) და left(p(a5)) მისამართები?
+```
 left(p(p(a5))) - 35(a4)
 left(p(a5)) - NULL/none
-
+```
 ### რისი ტოლია a6-ის მომდევნო მისამართი? a1 - ის მომდევნო მისამართი?
+```
 როგორც ვხედავთ a6 - ის მომდევნო მისამართი ხეში არ არსებობს, ძებნა ჩვეულებრივად დაიწყება თუმცა საბოლოოდ როცა დავადგენთ, რომ მიზნის მნიშვნელობა არ არსებობს ხეში ძებნა სრულდება და დააბრუნებს null/None მისამართს.
-
+```
 ### მოიყვანეთ პროგრამის ფრაგმენტი, რომელიც შექმნის სიმრავლის (ხეს), ჩატარებს მასში მითითებულ გასაღებებს, მოძებნის 40-ს და დაბეჭდავს ძებნის შედეგს.
 ```cpp
 hello
@@ -75,7 +77,9 @@ hello
 hello
 ```
 ### მოიყვანეთ პროგრამული კოდის ფრაგმენტი, რომელშიც კეთდება განაცხადი დაუხარისხებელი სიმრავლის ობიექტზე. მოხდება 18, 28, 55 გასაღებების ჩამატება, ელემენტების 55 და 88 მოძებნა და წაშლა.
-
+```
+hello
+```
 ### 4) გააკეთეთ განაცხადი სიმრავლის (set) ობიექტზე დს განაცხადის გაკეთების მომენტშივე ჩააგდეთ მასში რამდენიმე ნამდვილი რიცხვი. შემდეგ, გაიგეთ კონტეინერში მოთავსებული უარყოფითი რიცხვების რაოდენობა და დაბეჭდეთ იგი. დაბეჭდეთ კონტეინერის უდიდესი და მისი წინა ელემენტები.
 ```cpp
 hello
