--- a/ვარიანტი1.md
+++ b/ვარიანტი1.md
@@ -243,7 +243,57 @@ cout << *s.rbegin() << '\n';
 ### 5) მოცემულია მთელი არაუარყოფითი რიცხვების ვექტორი (0, 2, 1, 2, 3, 0, 5, 3) დაახასიათეთ იგი გადათვლის (CountingSort) ალგორითმით და აჩვენეთ ბიჭების მიხედვით როგორ იცვლება დამხმარე c ვექტორი და საბოლოო b(n) ვექტორი.
 
 ```
-hello
+**_ბიჯი ერთი:_** შევქმნით დამხმარე C ვექტორს , რომლის ზომა იქნება max_val−min_val+1. ამ შემთხვევაში, 5−0+1=6. C ვექტორის ინდექსები იქნება 0-დან 5-ის ჩათვლით, რაც შეესაბამება ჩვენი რიცხვების დიაპაზონს. თავდაპირველად ყველა მნიშვნელობა ნული იქნება.
+
+**_ბიჯი ორი:_** ეხება უკვე საწყისი ვექტორიდან ელემენტების დათვლას C ვექტორში.
+ახლა გავივლით **A** ვექტორს და თითოეული ელემენტისთვის გავზრდით C ვექტორის შესაბამისი ინდექსის მნიშვნელობას ერთით. რადგან ჩვენი min_val არის 0, არ გვჭირდება ოფსეტის გამოკლება (თუ min_val მაგალითად 7 ყოფილიყო, 7-იანის დასათვლელად C[7−7]=C[0]-ს გამოვიყენებდით).
+
+|            |                     |               |
+| ---------- | ------------------- | ------------- |
+| A ელემენტი | C ვექტორის ცვლილება | C ვექტორი     |
+| A[0]=0     | C[0]++              | [1,0,0,0,0,0] |
+| A[1]=2     | C[2]++              | [1,0,1,0,0,0] |
+| A[2]=1     | C[1]++              | [1,1,1,0,0,0] |
+| A[3]=2     | C[2]++              | [1,1,2,0,0,0] |
+| A[4]=3     | C[3]++              | [1,1,2,1,0,0] |
+| A[5]=0     | C[0]++              | [2,1,2,1,0,0] |
+| A[6]=5     | C[5]++              | [2,1,2,1,0,1] |
+| A[7]=3     | C[3]++              | [2,1,2,2,0,1] |
+
+**C ვექტორი მეორე ნაბიჯის ბოლოს:** C=[2,1,2,2,0,1] (ეს ნიშნავს: 0 გვხვდება 2-ჯერ, 1 გვხვდება 1-ხელ, 2 გვხვდება 2-ჯერ, 3 გვხვდება 2-ჯერ, 4 გვხვდება 0-ჯერ, 5 გვხვდება 1-ხელ).
+
+**_ნაბიჯი 3:_**
+ახლა შევცვლით C ვექტორს ისე, რომ C[i] შეიცავდეს იმ ელემენტების რაოდენობას, რომლებიც i-ზე ნაკლები ან i-ის ტოლია. ეს დაგვეხმარება ელემენტის საბოლოო პოზიციის განსაზღვრაში.
+
+|           |                    |                    |                     |     |
+| --------- | ------------------ | ------------------ | ------------------- | --- |
+| C ინდექსი | წინა C მნიშვნელობა | გამოთვლა           | ახალი C მნიშვნელობა |     |
+| C[0]      | 2                  | - (არ იცვლება)     | 2                   |     |
+| C[1]      | 1                  | C[1]=C[1]+C[0]=1+2 | 3                   |     |
+| C[2]      | 2                  | C[2]=C[2]+C[1]=2+3 | 5                   |     |
+| C[3]      | 2                  | C[3]=C[3]+C[2]=2+5 | 7                   |     |
+| C[4]      | 0                  | C[4]=C[4]+C[3]=0+7 | 7                   |     |
+| C[5]      | 1                  | C[5]=C[5]+C[4]=1+7 | 8                   |     |
+
+**C ვექტორი მესამე ბიჯის ბოლოს:** C=[2,3,5,7,7,8]
+
+**_ბიჯი 4:_**
+შევქმნით საბოლოო ვექტორს B, რომლის ზომა იქნება n (ანუ 8). ახლა გავივლით **A** ვექტორს **ბოლოდან დასაწყისისკენ** (ეს მნიშვნელოვანია სტაბილურობისთვის!) და C ვექტორის დახმარებით თითოეულ ელემენტს მის სწორ პოზიციაზე დავსვამთ B ვექტორში. ყოველი განთავსების შემდეგ, ვამცირებთ შესაბამის მრიცხველს C ვექტორში.
+B=[_,_,_,_,_,_,_,_]
+
+|           |                  |                   |                        |                     |                     |     |
+| --------- | ---------------- | ----------------- | ---------------------- | ------------------- | ------------------- | --- |
+| A ინდექსი | A[i] მნიშვნელობა | C[A[i]] (პოზიცია) | B პოზიცია ( C[A[i]]−1) | B ვექტორის ცვლილება | C ვექტორის ცვლილება |     |
+| A[7]=3    | 3                | C[3]=7            | B[6]                   | [_,_,_,_,_,_,3,_]   | C[3] ხდება 6        |     |
+| A[6]=5    | 5                | C[5]=8            | B[7]                   | [_,_,_,_,_,_,3,5]   | C[5] ხდება 7        |     |
+| A[5]=0    | 0                | C[0]=2            | B[1]                   | [_,0,_,_,_,_,3,5]   | C[0] ხდება 1        |     |
+| A[4]=3    | 3                | C[3]=6            | B[5]                   | [_,0,_,_,_,3,3,5]   | C[3] ხდება 5        |     |
+| A[3]=2    | 2                | C[2]=5            | B[4]                   | [_,0,_,_,2,3,3,5]   | C[2] ხდება 4        |     |
+| A[2]=1    | 1                | C[1]=3            | B[2]                   | [_,0,1,_,2,3,3,5]   | C[1] ხდება 2        |     |
+| A[1]=2    | 2                | C[2]=4            | B[3]                   | [_,0,1,2,2,3,3,5]   | C[2] ხდება 3        |     |
+| A[0]=0    | 0                | C[0]=1            | B[0]                   | [0,0,1,2,2,3,3,5]   | C[0] ხდება 0        |     |
+
+**_დალაგებული ვექტორი B=(0,0,1,2,2,3,3,5)_**
 ```
 ### 6) ორობითი გროვა: ძირითადი განმარტებები, გროვის ძირითადი მეთოდების აღწერა, გროვის ძირითადი თვისების აღდგენის ალგორითმის ფსევდო კოდი ან კოდი, მისი სისწრაფის შეფასება და ალგორითმის კორექტულობის საკითხი.
 ```
