--- a/ვარიანტი1.md
+++ b/ვარიანტი1.md
@@ -301,5 +301,11 @@ hello
 ```
 ### 7) გადათვლით დახარისხების ალგორითმი, მისი სისწრაფის შეფასება და განხილვა შესაძლო განზოგადებები.
 ```
-counting sort დახარისხების სპეციფიკური ალგორითმია იმიტომ, რომ იგი მხოლოდ და მხოლოდ მთელ რიცხვებს ამუშავებს, ამის ხაეჯზე ეს ითვლება საუკეთესო ალგორითმად ბიჯების თვალსაზრისით. სისწრაფე პროპორციულია დიაპაზონის. ის წრფივ დროში ახარისხებს მონაცემებს მისი მუშაობის სიჩქარეა n. მისი სიჩქარე დამოკიდებულია იმაზე თუ რამდენი ელემენტიც აქვს (რამხელა დიაპაზონიც აქვს კონტეინერს) counting sort - ისთვის საჭიროა დამხმარე კონტეინერი.
+Counting Sort არის სპეციფიკური დახარისხების ალგორითმი, რადგან ის მხოლოდ მთელ რიცხვებს ამუშავებს. ის არ ეყრდნობა შედარებებს, რაც მისი ერთ-ერთი მთავარი უპირატესობაა.
+
+მისი სისწრაფე არის O(n+k) წრფივი დროითი სირთულე, სადაც n არის დასალაგებელი ელემენტების რაოდენობა, ხოლო k არის ელემენტების დიაპაზონი (მაქსიმალური მნიშვნელობა მინუს მინიმალური მნიშვნელობა პლუს ერთი). ეს ნიშნავს, რომ მისი მუშაობის სიჩქარე დამოკიდებულია როგორც ელემენტების რაოდენობაზე, ასევე მათ დიაპაზონზე.
+
+Counting Sort ითვლება ძალიან ეფექტურ (პრაქტიკულად საუკეთესო) ალგორითმად, როდესაც რიცხვების დიაპაზონი (k) შედარებით მცირეა ელემენტების რაოდენობასთან (n) შედარებით. ამ პირობებში ის ახარისხებს მონაცემებს წრფივ დროში. თუმცა, თუ დიაპაზონი ძალიან დიდია, ალგორითმი ხდება არაეფექტური როგორც დროითი, ასევე სივრცითი სირთულის თვალსაზრისით.
+
+Counting Sort-ისთვის აუცილებელია დამხმარე კონტეინერების (მასივების) გამოყენება .
 ```
