--- a/ვარიანტი1.md
+++ b/ვარიანტი1.md
@@ -1,5 +1,5 @@
 # ბილეთი 1
-### 1) შექმენით პროგრამა რომელიც გააკეთებს ვექტორს, განაცხადშივე შეავსებს მას რამდენიმე მთელი რიცხვით (5 ან 6 მაინც ამ ვექტორისგან შექმნის გროვას და დაბეჭდავს მის შიგთავსს. შემდეგ დაამატებს გროვაში კიდევ სამ ელემენტს. მოიყვანეთ გროვაში ელემენტის ჩამატების ალგორითმის ფსევდოკოდი ან კოდი და მისი სისწრაფის შეფასება. 
+x### 1) შექმენით პროგრამა რომელიც გააკეთებს ვექტორს, განაცხადშივე შეავსებს მას რამდენიმე მთელი რიცხვით (5 ან 6 მაინც ამ ვექტორისგან შექმნის გროვას და დაბეჭდავს მის შიგთავსს. შემდეგ დაამატებს გროვაში კიდევ სამ ელემენტს. მოიყვანეთ გროვაში ელემენტის ჩამატების ალგორითმის ფსევდოკოდი ან კოდი და მისი სისწრაფის შეფასება. 
 ```cpp
 #include <algorithm>
 #include <iostream>
@@ -214,7 +214,51 @@ Function Insert(key, value):
 ```
 ### მოიყვანეთ პროგრამული კოდის ფრაგმენტი, რომელშიც კეთდება განაცხადი დაუხარისხებელი სიმრავლის ობიექტზე, მოხდება იგივე გასაღებების ჩამატება რაც წერია ცხრილში, შემდეგ 42 და 97-ის დამატება, შემდეგ 97-ის მოძებნა და წაშლა.
 ```cpp
-hello
+#include <iostream>
+#include <unordered_set>
+#include <vector>
+#include <algorithm> // For std::find and std::for_each (optional, for printing)
+
+int main() {
+    // Create an unordered_set of integers
+    std::unordered_set<int> mySet;
+
+    // Insert the initial keys from the table (0, 4, 26, 10).
+    // Note: The table has multiple zeros. An unordered_set only stores unique elements.
+    mySet.insert(0);
+    mySet.insert(4);
+    mySet.insert(26);
+    mySet.insert(10);
+
+    // Adding 42 and 97
+    mySet.insert(42);
+    mySet.insert(97);
+
+    // Optional: Print elements after initial insertions
+    std::cout << "Set elements after initial insertions and additions: ";
+    for (int val : mySet) {
+        std::cout << val << " ";
+    }
+    std::cout << std::endl;
+
+    // Find and delete 97
+    // Using count() to check for existence before erasing is a common pattern.
+    if (mySet.count(97)) {
+        mySet.erase(97);
+        std::cout << "97 found and deleted." << std::endl;
+    } else {
+        std::cout << "97 not found in the set." << std::endl;
+    }
+
+    // Optional: Print elements after deletion
+    std::cout << "Set elements after deleting 97: ";
+    for (int val : mySet) {
+        std::cout << val << " ";
+    }
+    std::cout << std::endl;
+
+    return 0;
+}
 ```
 ### 4) გააკეთეთ განაცხადი სიმრავლის (set) ობიექტზე და განაცხადის გაკეთების მომენტშივე ჩააგდეთ მასში რამდენიმე ნამდვილლი რიცხვი. შემდეგ იანგარიშეთ კონტეინერში მოთავსებული ელემენტების ნამრავლი და დაბეჭდეთ იგი. დაბეჭდეთ კონტეინერის უდიდესი და უმცირესი ელემენტები.
 ```cpp
