--- a/ვარიანტი1.md
+++ b/ვარიანტი1.md
@@ -341,7 +341,17 @@ B=[_,_,_,_,_,_,_,_]
 ```
 ### 6) ორობითი გროვა: ძირითადი განმარტებები, გროვის ძირითადი მეთოდების აღწერა, გროვის ძირითადი თვისების აღდგენის ალგორითმის ფსევდო კოდი ან კოდი, მისი სისწრაფის შეფასება და ალგორითმის კორექტულობის საკითხი.
 ```
-hello
+ბინარული გროვა არის გროვა, ანუ ხე, რომელიც ემორჩილება იმ თვისებას, რომ ნებისმიერი ხის ფესვი მეტია ან ტოლია (ან ნაკლებია ან ტოლია) მისი ყველა შვილისთვის (მშობლის თვისებები გადადის შვილის თვისებებზე).
+*first წარმოადგენს უდიდეს ელემენტს.
+ ახალი ელემენტი დავამატოთ გროვას ლოგარითმულ დროში ან შესაძლოა უდიდესი ელემენტი ამოვიღოთ გროვიდან. ორივე ალგორითმი დასრულების შემდეგ ტოვებს ისევ სრულყოფილ
+გროვას.
+გროვის რამდენიმე მეთოდი არსებობს. ზოგ მათგანში მოქმედებები ლოგარითმულზე სწრაფად სრულდება (მაგალითად, ფიბონაჩის გროვაში). თუმცა პატარა რაოდენობის ელემენტებისთვის ორობითი გროვა საუკეთესო. ასეთ გროვის ვიზუალიზაცია ხდება ბინარული ხის სახით.
+ბინარული გროვა ნებისმიერი [first,last) დიაპაზონისგან იქმნება,
+first,last ეკუთვნის Random Access იტერატორების კატეგორიას. ესეიგი ბინარული გროვის ალგორითმები ინდექსების გამოყენებითაც იგება. [a,b) სახის სწრაფი წვდომის იტერატორების წყვილისთვის, სადაც a <= b.
+*b = a[b-a]
+*a = a[0]
+```
+```cpp
 ```
 ### 7) გადათვლით დახარისხების ალგორითმი, მისი სისწრაფის შეფასება და განხილვა შესაძლო განზოგადებები.
 ```
